--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ a{
 @media screen and (max-width: 720px){
     .logo{
         position: absolute;
-        left: 80px;
+        left: 75px;
         top: 80px;
         background-color:aliceblue;
         border-radius: 30px;
@@ -84,13 +84,12 @@ a{
         inset 5px 5px 5px rgba(0, 0, 0, 0.1);;
     }
     .text{
-        top: 400px;
+        top: 300px;
 
 
     }
     h1{
-        font-size: 30px;
-        letter-spacing: 2px;
+        font-size: 25px;
         text-shadow: 1px 1px 10px black;
 
     }
@@ -98,6 +97,8 @@ a{
         position: relative;
         top: 30px;
         text-shadow: 2px 2px 10px black;
+        text-align: justify;
+        width: 50%;
 
     }
     .search{
