--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: arial;
+    /* font-family: arial; */
 }
 .header{
     background-color: aliceblue;
     height: 800px;
     width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
     
 }
 .menu{
@@ -71,12 +72,19 @@ a{
     width: 59.8%;
 }
 @media screen and (max-width: 720px){
+    .logo0{
+        display: flex;
+        justify-content: center;
+    }
     .logo{
-        position: absolute;
-        left: 75px;
-        top: 80px;
-        background-color:aliceblue;
-        border-radius: 30px;
+        display: block;
+        width: 50%;
+        position: relative;
+        top: 40px;
+        left: 0;
+        border-radius: 25px;
+        
+
 
         box-shadow: -15px -15px 15px rgba(255, 255, 255, 0.2),
         15px 15px 15px rgba(0,0,0,0.1),
@@ -84,25 +92,28 @@ a{
         inset 5px 5px 5px rgba(0, 0, 0, 0.1);;
     }
     .text{
-        top: 400px;
-
-
+        display: block;
+        width: 85%;
+        height: 50%;
+        position: relative;
+        top: 80px;
+        /* background-color: red; */
     }
-    h1{
-        font-size: 25px;
-        text-shadow: 1px 1px 10px black;
-
+    .header{
+        font-family: Arial, Helvetica, sans-serif;
+        text-shadow: 2px 2px 10px rgb(111, 97, 97);
     }
     p{
+        line-height: 20px;
         position: relative;
-        top: 30px;
-        text-shadow: 2px 2px 10px black;
-        text-align: justify;
-        width: 50%;
-
+        top: 20px;
+        
     }
     .search{
-        margin-right: 20px;
+        padding: 5px;
+        margin-right: 25px;
     }
+
+   
 }
 
